novo index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <header>
       <div class="navbar">
         <img src="../../assets/Logo.png" alt="" />
-        <a href="#" target="_blank">Repositório</a>
+        <a 
+        href="https://github.com/nicholasPimenta/promessas-brasileiras-f1/tree/main" 
+        target="_blank"
+        >
+          Repositório
+        </a>
       </div>
         <h1>Promessas Brasileiras da Formula 1</h1>
         <h2>Saiba tudo sobre a nova leva de Pilotos Brasileiros que estão nas categorias de base da Formula 1.</h2>
